episode.html 하단 스크립트 부분에 차트 js 파일 스크립트 추가함 footer클래스 삭제함
kyewordbarchart, writerbarchart 수정
chart.scss 크기 수정

--- a/webtoon - project/scss/_charts.scss
+++ b/webtoon - project/scss/_charts.scss
@@ -11,10 +11,28 @@
 // Bar Chart
 .chart-bar {
   position: relative;
-  height: 10rem;
+  height: 20rem;
   width: 80%;
   @include media-breakpoint-up(md) {
     height: 20rem;
+  }
+}
+
+.chart-bar2 {
+  position: relative;
+  height: 30rem;
+  width: 100%;
+  @include media-breakpoint-up(md) {
+    height: 30rem;
+  }
+}
+
+.chart-bar3 {
+  position: relative;
+  height: 30rem;
+  width: 100%;
+  @include media-breakpoint-up(md) {
+    height: 30rem;
   }
 }
 
